--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       class="container-fluid container--full-view-port d-flex align-item-center justify-content-center"
     >
       <div class="jumbotron m-auto">
-        <h1 class="display-4">Hello, Selamat datang dalam pembelajaran</h1>
+        <h1 class="display-4">Hello</h1>
+        <h2 class="display-4">Selamat Datang</h2>
         <p class="lead">
           This is simple hero uni, a simple jumbotron-style component for
           calling extra attention to feature content or information
