--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           <strong>INFO ! </strong> Data yang sudah masuk, tidak dapat diubah
           kembali
         </div>
+        <div class="alert alert-danger">
+          <strong>INFO ! </strong> Data yang sudah masuk, tidak dapat diubah
+          kembali
+        </div>
       </div>
     </div>
     <script
